base-infra/istio/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "-3" # Create namespace first (before CRDs)
spec: {}
