base-infra/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "-2"  # Create namespace first
spec: {}
